# algorithms-swift

./: .gitignore  CMakeLists.txt  ReadMe.md
src/: CMakeLists.txt  main.swift
src/modules/: CMakeLists.txt
src/modules/algorithms/: ASort.swift  MergeSort.swift  SelectionSort.swift
src/modules/datastructures/: AList.swift  DoublyLinkedList.swift  DynamicArray.swift  IList.swift
